--- a/src/components/TagCloud.css
+++ b/src/components/TagCloud.css
@@ -16,9 +16,4 @@
     .tagCloud {
         width: 100%;
     }
-
-    #aca562621-dfe8-46bc-8d07-644f870fa7c2 {
-        width: 300;
-    }
-
 }
