--- a/src/views/Greeting.css
+++ b/src/views/Greeting.css
@@ -104,4 +104,26 @@ h1 {
         animation: animateLightbar 5.5s linear infinite;
     }
 
+
+    @keyframes animateLightbar {
+
+        0%,
+        5% {
+            transform: scaleY(0) translateX(0);
+        }
+
+        10% {
+            transform: scaleY(1) translateX(0);
+        }
+
+        90% {
+            transform: scaleY(1) translateX(calc(300px - 10px));
+        }
+
+        95%,
+        100% {
+            transform: scaleY(1) translateX(calc(300px - 10px));
+        }
+    }
+
 }
