--- a/src/views/Skills.css
+++ b/src/views/Skills.css
@@ -14,7 +14,7 @@
     color: white;
 }
 
-.idols::after {
+/* .idols::after {
     content: "";
     display: block;
     position: absolute;
@@ -40,19 +40,20 @@
 
 .buffett:hover::after {
     background-image: url(https://emprendedoresnews.com/wp-content/uploads/2020/11/warren_buffett_2.jpg);
-}
+} */
 
 
 @media screen and (max-width: 480px) {
 
     .skills {
+        top: 80px;
         width: 100%;
         height: 100%;
     }
 
     .skillsContainer {
         width: 100%;
-        margin: 1rem;
+        margin: 0rem;
     }
 
 }
